# CV2

./: .gitignore
a1/: ICP.asv  ICP.m  README.txt  combine.asv  combine.m  pcshow.m  pcshow2.m  pcshowpair.m  stitch.asv  stitch.m  testje.m  transform.m  trim_pc.m
a1/report/: report.aux  report.tex
a1/report/graphs/: graph1.tex  graph2.tex  graph3.tex
a2/: RANSAC.asv  RANSAC.m  RANSAC.m~  createProjectionMatrix.m  cvalgLineToBorderPoints.m  epipolarLine.m  estimateProjectionMatrix.asv  estimateProjectionMatrix.m  lineToBorderPoints.m  plotepilines.asv  plotepilines.m  plotlines.m  sift_trim.asv  sift_trim.m  step3.asv  step3.m  stitch.asv  stitch.m  stitch.m~
a2/House/jpg/: frame00000001.mat  frame00000001.sift  frame00000002.mat  frame00000002.sift  frame00000003.mat  frame00000003.sift  frame00000004.mat  frame00000004.sift  frame00000005.mat  frame00000005.sift  frame00000006.mat  frame00000006.sift  frame00000007.mat  frame00000007.sift  frame00000008.mat  frame00000008.sift  frame00000009.mat  frame00000009.sift  frame00000010.mat  frame00000010.sift  frame00000011.mat  frame00000011.sift  frame00000012.mat  frame00000012.sift  frame00000013.mat  frame00000013.sift  frame00000014.mat  frame00000014.sift  frame00000015.mat  frame00000015.sift  frame00000016.mat  frame00000016.sift  frame00000017.mat  frame00000017.sift  (+66 more)
a3/Frame3D/: CMakeLists.txt  Frame3D.cpp  README  compile.txt  frame3d  main.cpp  main.h  ys_make.bat
a3/Frame3D/include/: functions.h  main.h
a3/Frame3D/src/: FileUtils.cpp  Frame3D.cpp  functions.cpp  main.cpp
a3/ysbin/: CMakeCache.txt
(+58 files in other folders)
